# trading-engine

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
deploy/: README.md  config.server.yaml  setup.sh  trading-engine.service
tests/: conftest.py  test_config.py  test_edge2_port.py  test_engine.py  test_filters.py  test_indicators.py  test_options_data.py  test_order_manager.py  test_paper_broker.py  test_pricing.py  test_profit_protection.py  test_risk.py  test_short_pnl_and_caps.py  test_strategies.py  test_trade_log.py  test_web_auth.py
trading_engine/: __init__.py  cli.py  config.py  engine.py  filters.py  models.py
trading_engine/dashboard/: terminal.py  web.py
trading_engine/data/: indicators.py  market_data.py  options_data.py  pricing.py
trading_engine/edge2/: __init__.py  bridge.py  catalyst_nlp.py  database.py  instrument_filter.py  outcome_tracker.py  scanner.py  universe.py
trading_engine/execution/: __init__.py  alpaca.py  base.py  order_manager.py  paper.py  tradier.py
trading_engine/risk/: __init__.py  manager.py  position_sizing.py
trading_engine/storage/: __init__.py  trade_log.py
trading_engine/strategies/: __init__.py  base.py  momentum_breakout.py  options_flow.py
